[package]
name = "dtre"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
thiserror = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.8"

[dev-dependencies]
proptest = "1.4"
